tests/fixtures/invalid/undefined_function_call.c
int main() {
    return missing(1);
}
